--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,26 +12,26 @@
 		@apply font-sans;
 	}
 	h3 {
-		@apply text-lg font-semibold cursor-default
+		@apply text-lg font-semibold cursor-default;
 	}
 	h4 {
-		@apply font-medium text-[15px] cursor-default
+		@apply font-medium text-[15px] cursor-default;
 	}
 }
 
 @layer components {
 	.small_text {
-		@apply text-[10px]
+		@apply text-[10px];
 	}
 	.container {
 		@apply max-w-md mx-auto pb-8 px-6 min-h-screen;
 	}
 
 	.filter_card {
-		@apply relative w-36 h-28 rounded-2xl p-3 flex items-end cursor-pointer
+		@apply relative w-36 h-28 rounded-2xl p-3 flex items-end cursor-pointer;
 	}
 }
 
 .swiper-slide {
-  width: fit-content !important;
+	width: fit-content !important;
 }
